--- a/PMS-PropertyHapa.Admin/Views/Account/Login.cshtml
+++ b/PMS-PropertyHapa.Admin/Views/Account/Login.cshtml
@@ -33,5 +33,5 @@
     <div class="form-group">
         <button class="btn btn-primary btn-block" type="submit">Sign in</button>
     </div>
-    <p>Don't have an account?<a class="ms-2" href="sign-up.html">Create Account</a></p>
+    <p>Don't have an account?<a class="ms-2" href="/Account/Registration">Create Account</a></p>
 </form>
