--- a/PMS-PropertyHapa.Admin/Views/GroupRoles/Index.cshtml
+++ b/PMS-PropertyHapa.Admin/Views/GroupRoles/Index.cshtml
@@ -3,53 +3,55 @@
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
 <div class="page-body">
     <div class="container-fluid">
         <div class="page-title">
             <div class="row">
-                <div class="col-12 col-sm-6">
+                <div class="col-12">
                     <h3>Roles/Groups List</h3>
-                </div>
-                <div class="col-12 col-sm-6">
                     <ol class="breadcrumb">
-                        <li class="breadcrumb-item"> <a class="home-item" href="index.html"><i data-feather="home"></i></a></li>
-                        <li class="breadcrumb-item"> Dashboard</li>
-                        <li class="breadcrumb-item active"> Roles/Groups</li>
+                        <li class="breadcrumb-item"><a class="home-item" href="index.html"><i data-feather="home"></i></a></li>
+                        <li class="breadcrumb-item">Dashboard</li>
+                        <li class="breadcrumb-item active">Roles/Groups</li>
                     </ol>
                 </div>
             </div>
         </div>
     </div>
-    <div class="container-fluid default-dash">
+    <div class="container-fluid">
         <div class="row">
-            <div class="col-xl-12 col-md-6 dash-xl-50">
+            <div class="col-12">
                 <div class="card">
-                    <div class="card-header align-items-center d-flex">
-                        <h4 class="card-title mb-0 flex-grow-1"><button type="button" class="btn btn-success add-btn" data-bs-toggle="modal" id="create-btn" data-bs-target="#AddRole"><i class="ri-add-line align-bottom me-1"></i> Add Roles/Groups</button></h4>
-                        <div class="flex-shrink-0">
+                    <div class="card-header d-flex align-items-center justify-content-between">
+                        <h4 class="card-title">
+                            <button type="button" class="btn btn-success" data-bs-toggle="modal" id="create-btn" data-bs-target="#AddRole">
+                                <i class="ri-add-line align-bottom me-1"></i> Add Roles/Groups
+                            </button>
+                        </h4>
+                    </div>
+                    <div class="card-body">
+                        <div class="table-responsive">
+                            <table class="table" id="grouproles">
+                                <thead>
+                                    <tr>
+                                        <th>Roles Title</th>
+                                        <th>Roles Status</th>
+                                        <th>Roles Key</th>
+                                        <th>Action</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                </tbody>
+                            </table>
                         </div>
-                    </div><!-- end card header -->
-                    <div class="card-body table-responsive">
-                        <table class="display" id="grouproles">
-                            <thead>
-                                <tr>
-                                    <th style="width:320px!important;text-align:center!important">Roles Title</th>
-                                    <th style="width:320px!important;text-align:center!important">Roles Status</th>
-                                    <th style="width:320px!important;text-align:center!important">Roles Key</th>
-                                    <th style="">Action</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                            </tbody>
-                        </table>
                     </div>
                 </div>
             </div>
-
         </div>
     </div>
 </div>
+
+
 
 @* Add Model*@
 <div class="modal fade" id="AddRole" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
