--- a/PMS-PropertyHapa.Admin/Views/Groups/Index.cshtml
+++ b/PMS-PropertyHapa.Admin/Views/Groups/Index.cshtml
@@ -7,44 +7,46 @@
     <div class="container-fluid">
         <div class="page-title">
             <div class="row">
-                <div class="col-12 col-sm-6">
+                <div class="col-12">
                     <h3>Groups List</h3>
-                </div>
-                <div class="col-12 col-sm-6">
                     <ol class="breadcrumb">
-                        <li class="breadcrumb-item"> <a class="home-item" href="index.html"><i data-feather="home"></i></a></li>
-                        <li class="breadcrumb-item"> Dashboard</li>
-                        <li class="breadcrumb-item active"> Roles/Groups</li>
+                        <li class="breadcrumb-item"><a class="home-item" href="index.html"><i data-feather="home"></i></a></li>
+                        <li class="breadcrumb-item">Dashboard</li>
+                        <li class="breadcrumb-item active">Roles/Groups</li>
                     </ol>
                 </div>
             </div>
         </div>
     </div>
-    <div class="container-fluid default-dash">
+    <div class="container-fluid">
         <div class="row">
-            <div class="col-xl-12 col-md-6 dash-xl-50">
+            <div class="col-12">
                 <div class="card">
-                    <div class="card-header align-items-center d-flex">
-                        <h4 class="card-title mb-0 flex-grow-1"><button type="button" class="btn btn-success add-btn" data-bs-toggle="modal" id="create-btn" data-bs-target="#AddRole"><i class="ri-add-line align-bottom me-1"></i> Add Groups</button></h4>
-                        <div class="flex-shrink-0">
+                    <div class="card-header d-flex justify-content-between align-items-center">
+                        <h4 class="card-title">
+                            <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#AddRole">
+                                <i class="ri-add-line align-bottom me-1"></i> Add Groups
+                            </button>
+                        </h4>
+                    </div>
+                    <div class="card-body">
+                        <div class="table-responsive">
+                            <table class="table" id="grouproles">
+                                <thead>
+                                    <tr>
+                                        <th>Group Name</th>
+                                        <th>Roles</th>
+                                        <th>Action</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+         
+                                </tbody>
+                            </table>
                         </div>
-                    </div><!-- end card header -->
-                    <div class="card-body table-responsive">
-                        <table class="display" id="grouproles">
-                            <thead>
-                                <tr>
-                                    <th style="width:350px!important;text-align:center!important">Group Name</th>
-                                    <th style="width:350px!important;text-align:center!important">Roles</th>
-                                    <th style="">Action</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                            </tbody>
-                        </table>
                     </div>
                 </div>
             </div>
-
         </div>
     </div>
 </div>
