--- a/PMS-PropertyHapa.Admin/Views/Account/Registration.cshtml
+++ b/PMS-PropertyHapa.Admin/Views/Account/Registration.cshtml
@@ -20,6 +20,9 @@
                         <input asp-for="Name" type="text" class="form-control" placeholder="Name..." autocomplete="off" required>
                     </div>
                     <div class="mb-3">
+                        <input asp-for="Email" type="text" class="form-control" placeholder="Email..." autocomplete="off" required>
+                    </div>
+                    <div class="mb-3">
                         <input asp-for="Password" type="password" class="form-control" placeholder="Password..." autocomplete="off" required>
                     </div>
                     <div class="mb-3">
