--- a/PMS-PropertyHapa/Views/Auth/Register.cshtml
+++ b/PMS-PropertyHapa/Views/Auth/Register.cshtml
@@ -72,6 +72,9 @@
                 <input asp-for="Name" type="text" class="form-control" placeholder="Name..." autocomplete="off" />
             </div>
             <div class="col-md-12 pb-2">
+                <input asp-for="Email" type="text" class="form-control" placeholder="Email..." autocomplete="off" />
+            </div>
+            <div class="col-md-12 pb-2">
                 <input asp-for="Password" type="password" class="form-control" placeholder="Password..." autocomplete="off" />
             </div>
             <div class="col-md-12 pb-2">
