--- a/PMS-PropertyHapa.Admin/Views/Account/Login.cshtml
+++ b/PMS-PropertyHapa.Admin/Views/Account/Login.cshtml
@@ -4,8 +4,8 @@
     Layout = "~/Views/Shared/_IdentityLayout.cshtml";
 }
 <form class="theme-form login-form needs-validation" novalidate="" asp-action="Login" method="post">
-    <h4>Login</h4>
-    <h6>Welcome back! Log in to your account.</h6>
+    <h3>Admin Login</h3>
+    <h4>Welcome back Admin! Log in to your account.</h4>
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <div class="form-group">
         <label>Email Address</label>
