--- a/PMS-PropertyHapa.Admin/Views/GroupRoles/Index.cshtml
+++ b/PMS-PropertyHapa.Admin/Views/GroupRoles/Index.cshtml
@@ -8,11 +8,11 @@
         <div class="page-title">
             <div class="row">
                 <div class="col-12">
-                    <h3>Roles/Groups List</h3>
+                    <h3>App Pages List</h3>
                     <ol class="breadcrumb">
                         <li class="breadcrumb-item"><a class="home-item" href="index.html"><i data-feather="home"></i></a></li>
                         <li class="breadcrumb-item">Dashboard</li>
-                        <li class="breadcrumb-item active">Roles/Groups</li>
+                        <li class="breadcrumb-item active">App Pages</li>
                     </ol>
                 </div>
             </div>
@@ -25,7 +25,7 @@
                     <div class="card-header d-flex align-items-center justify-content-between">
                         <h4 class="card-title">
                             <button type="button" class="btn btn-success" data-bs-toggle="modal" id="create-btn" data-bs-target="#AddRole">
-                                <i class="ri-add-line align-bottom me-1"></i> Add Roles/Groups
+                                <i class="ri-add-line align-bottom me-1"></i> Add App Pages
                             </button>
                         </h4>
                     </div>
@@ -34,9 +34,9 @@
                             <table class="table" id="grouproles">
                                 <thead>
                                     <tr>
-                                        <th>Roles Title</th>
-                                        <th>Roles Status</th>
-                                        <th>Roles Key</th>
+                                        <th style="width:290px!Important">Roles Title</th>
+                                        <th style="width:290px!Important">Roles Key</th>
+                                        <th style="width:290px!Important">Roles Status</th>
                                         <th>Action</th>
                                     </tr>
                                 </thead>
@@ -58,7 +58,7 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title">Add Group/Role</h5>
+                <h5 class="modal-title">Add App Pages</h5>
                 <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
@@ -74,7 +74,7 @@
             <div class="modal-footer">
                 <div class="hstack gap-2 justify-content-end">
                     <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
-                    <button type="submit" class="btn btn-success" id="addbtn" onclick="Addrole();">Add Roles/Groups</button>
+                    <button type="submit" class="btn btn-success" id="addbtn" onclick="Addrole();">Add</button>
                 </div>
             </div>
         </div>
@@ -85,7 +85,7 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title">Edit Group/Role</h5>
+                <h5 class="modal-title">Edit App Pages</h5>
                 <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
@@ -102,7 +102,7 @@
             <div class="modal-footer">
                 <div class="hstack gap-2 justify-content-end">
                     <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
-                    <button type="submit" class="btn btn-success" id="editbtn" onclick="EditRoles();">Edit Role</button>
+                    <button type="submit" class="btn btn-success" id="editbtn" onclick="EditRoles();">Edit </button>
                 </div>
             </div>
         </div>
@@ -149,7 +149,7 @@
                 data: {  "RoleTitle": RoleTitle, "RoleKey": RoleKey, },
                 success: function (response) {
                     var Toast = Swal.mixin({ toast: true, position: 'top-end', showConfirmButton: false, progressBar: true, timer: 3000 });
-                    Toast.fire({ icon: 'success', title: 'Role Create Successfully..!' });
+                    Toast.fire({ icon: 'success', title: 'New App Pages Add Successfully..!' });
                     $("#RoleTitle").val('');
                     $("#RoleKey").val('');
                     $('#AddRole').modal('hide');
@@ -179,12 +179,12 @@
                     if (item.RoleActive == true)
                     {
                         op += '<td style="color:green">Active</td>';
-                        op += '<td><div class="d-flex gap-2"><div class="edit"><button class="btn btn-sm btn-success edit-item-btn" data-bs-toggle="modal" data-bs-target="#EditRole" onclick="EditRole(\'' + item.Id + '\',\'' + item.GroupName + '\',\'' + item.RoleTitle + '\',\'' + item.RoleKey + '\')">Edit Role</button></div><div class="remove"></div><button class="btn btn-sm btn-warning remove-item-btn" onclick="DeleteInactive(\'' + item.Id + '\')">In-Active Role</button><button class="btn btn-sm btn-danger remove-item-btn" onclick="DeleteR(\'' + item.Id + '\')">Delete Role</button> </div></td>';
+                        op += '<td><div class="d-flex gap-2"><div class="edit"><button class="btn btn-sm btn-success edit-item-btn" data-bs-toggle="modal" data-bs-target="#EditRole" onclick="EditRole(\'' + item.Id + '\',\'' + item.GroupName + '\',\'' + item.RoleTitle + '\',\'' + item.RoleKey + '\')">Edit App Page</button></div><div class="remove"></div><button class="btn btn-sm btn-warning remove-item-btn" onclick="DeleteInactive(\'' + item.Id + '\')">In-Active App Page</button><button class="btn btn-sm btn-danger remove-item-btn" onclick="DeleteR(\'' + item.Id + '\')">Delete App Page</button> </div></td>';
                     }
                     else
                     {
                 op += '<td style="color:red">In-Active</td>';
-                        op += '<td><div class="d-flex gap-2"><div class="edit"><button class="btn btn-sm btn-success edit-item-btn" data-bs-toggle="modal" data-bs-target="#EditRole" onclick="EditRole(\'' + item.Id + '\',\'' + item.GroupName + '\',\'' + item.RoleTitle + '\',\'' + item.RoleKey + '\')">Edit Role</button></div><div class="remove"></div><button class="btn btn-sm btn-info remove-item-btn" onclick="DeleteRoleactive(\'' + item.Id + '\')">Active Role</button><button class="btn btn-sm btn-danger remove-item-btn" onclick="DeleteR(\'' + item.Id + '\')">Delete Role</button>  </div></td>';
+                        op += '<td><div class="d-flex gap-2"><div class="edit"><button class="btn btn-sm btn-success edit-item-btn" data-bs-toggle="modal" data-bs-target="#EditRole" onclick="EditRole(\'' + item.Id + '\',\'' + item.GroupName + '\',\'' + item.RoleTitle + '\',\'' + item.RoleKey + '\')">Edit App Page</button></div><div class="remove"></div><button class="btn btn-sm btn-info remove-item-btn" onclick="DeleteRoleactive(\'' + item.Id + '\')">Active App Page</button><button class="btn btn-sm btn-danger remove-item-btn" onclick="DeleteR(\'' + item.Id + '\')">Delete App Page</button>  </div></td>';
                     }
                     op += '</tr>';
                 });
@@ -219,7 +219,7 @@
                 success: function (response) {
                     $('#EditRole').modal('hide');
                     var Toast = Swal.mixin({ toast: true, position: 'top-end', showConfirmButton: false, progressBar: true, timer: 3000 });
-                    Toast.fire({ icon: 'success', title: 'Role Update Successfully..!' });
+                    Toast.fire({ icon: 'success', title: 'App Pages Update Successfully..!' });
                     getAllroles();
                 },
                 failure: function (response) {
@@ -232,7 +232,7 @@
         debugger;
         Swal.fire({
             title: 'Are you sure?',
-            text: "You want to In-Active this Role Again..!",
+            text: "You want to In-Active this App Page Again..!",
             icon: 'warning',
             showCancelButton: true,
             confirmButtonColor: '#3085d6',
@@ -248,7 +248,7 @@
                     },
                     success: function (response) {
                         var Toast = Swal.mixin({ toast: true, position: 'top-end', showConfirmButton: false, progressBar: true, timer: 3000 });
-                        Toast.fire({ icon: 'success', title: 'Role In-Active Successfully..!' });
+                        Toast.fire({ icon: 'success', title: 'App Pages In-Active Successfully..!' });
                         getAllroles();
                     },
                     failure: function (response) {
@@ -262,7 +262,7 @@
         debugger;
         Swal.fire({
             title: 'Are you sure?',
-            text: "You want to Active this Role Again..!",
+            text: "You want to Active this App Page Again..!",
             icon: 'warning',
             showCancelButton: true,
             confirmButtonColor: '#3085d6',
@@ -278,7 +278,7 @@
                     },
                     success: function (response) {
                         var Toast = Swal.mixin({ toast: true, position: 'top-end', showConfirmButton: false, progressBar: true, timer: 3000 });
-                        Toast.fire({ icon: 'success', title: 'Role Active Successfully..!' });
+                        Toast.fire({ icon: 'success', title: 'App Pages Active Successfully..!' });
                         getAllroles();
                     },
                     failure: function (response) {
@@ -308,7 +308,7 @@
                     },
                     success: function (response) {
                         var Toast = Swal.mixin({ toast: true, position: 'top-end', showConfirmButton: false, progressBar: true, timer: 3000 });
-                        Toast.fire({ icon: 'success', title: 'Role Delete Successfully..!' });
+                        Toast.fire({ icon: 'success', title: 'App Pages Delete Successfully..!' });
                           getAllroles();
                     },
                     failure: function (response) {
